# sentiencemud

./: .depend  .gitignore  CMakeLists.txt  Makefile  Makefile.clang  act_comm.c  act_enter.c  act_info.c  act_info2.c  act_move.c  act_obj.c  act_obj2.c  act_wiz.c  alias.c  auction.c  autowar.c  ban.c  bit.c  blueprint.c  boat.c  buildnumber.mak  church.c  classes.h  cmdedit.c  comm.c  compile  config  const.c  date.sh  db.c  db.h  db2.c  dungeon.c  editor.c  effects.c  events.c  fight.c  fight2.c  giturl.sh  gmon.out  (+97 more)
.devcontainer/: devcontainer.json
.github/workflows/: codeql.yml
